--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
     "Domain": "dev-05j84tecmi7hx6en.eu.auth0.com",
     "ClientId": "qp7iwBhAwup1NdT0NAPswPBa3nvVfkvs",
     "ClientSecret": "b7M9jLQy4zadf97tTZ8uSX_u61v-GFbHTMdq5va-SmWVOK2rqhERPL0HXd9TPq-3",
-    "Audience": "https://healthcarelogin.com"
+    "Audience": "https://dev-05j84tecmi7hx6en.eu.auth0.com/api/v2/"
   }
   
 }
