#25 Database Server Implementation

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=127.0.0.1;Database=postgres;Username=postgres;Password=lapr52324"
+    "DefaultConnection": "Host=vs764.dei.isep.ipp.pt;Database=postgres;Username=postgres;Password=Up0qvoj259yg"
   },
   "Auth0": {
     "Domain": "dev-05j84tecmi7hx6en.eu.auth0.com",
